Fixed hover on mobile for good (hopefully)

--- a/src/App.css
+++ b/src/App.css
@@ -355,7 +355,7 @@ h1 {
   }
 
   .portfolio-img:before {
-    height: 100%;
+    height: 40%;
   }
 }
 
@@ -374,6 +374,10 @@ h1 {
 @media (min-width: 769px) {
   .infoModal {
     width: 43.5em;
+  }
+
+  .portfolio-img:hover:before {
+    height: 30%;
   }
 }
 
